// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toBeBeforeOrEqualTo > fails when given an earlier date 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeBeforeOrEqualTo()[22m

Expected date to be before or equal to [31m2019-09-10T22:00:00.000Z[39m but received:
  [31m2019-09-01T22:00:00.000Z[39m"
`;

exports[`.not.toBeBeforeOrEqualTo > fails when given an equal date 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeBeforeOrEqualTo()[22m

Expected date to be before or equal to [31m2019-09-01T22:00:00.000Z[39m but received:
  [31m2019-09-01T22:00:00.000Z[39m"
`;

exports[`.toBeBeforeOrEqualTo > fails when given a later date 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeBeforeOrEqualTo()[22m

Expected date to be before or equal to [31m2019-09-01T22:00:00.000Z[39m but received:
  [31m2019-09-10T22:00:00.000Z[39m"
`;
